--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -1271,7 +1271,7 @@ steekproef_out %>%
 ## Manuele controle
 
 Johannes doet manuele controle van de puntenset.
-In de Westelijke leemstreek zijn 23 punten gevonden die niet mogelijk zijn om te tellen.  
+In de Zandleemstreek zijn 23 punten gevonden die niet mogelijk zijn om te tellen.  
   
 Het resultaat wordt als CSV en KML teruggestuurd. Een eerste kolom `beslissing` wordt toegevoegd met de volgende zaken:
 
@@ -1281,5 +1281,5 @@ Het resultaat wordt als CSV en KML teruggestuurd. Een eerste kolom `beslissing` 
 
 Een tweede kolom wordt toegevoegd `vervangen door`. Dit is enkel ingevuld bij een geschrapt punt uit de eerste set met de pointid van het punt waardoor het vervangen word uit de reserve set.  
   
-Uiteindelijk moeten we tot een CSV komen waarbij enkel de punten *behouden* van de eerste batch en *vervanging* van de reserve batch geüpload worden in Avimap (met tellerscode erbij).
+Uiteindelijk moeten we tot een CSV komen waarbij enkel de punten *behouden* van de eerste batch en *vervanging* van de reserve batch geüpload worden in Avimap (met tellerscode erbij). Overlappen met reeds getelde MAS punten worden niet meegegeven (5 punten).
 
